JCF: add Jim Brooke's documentation for dtpcontrols and dtpctrllibs

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -138,6 +138,8 @@ nav:
           - daqdataformats:
           - detchannelmaps:
           - detdataformats:
+          - dtpcontrols:
+          - dtpctrllibs:
           - fdreadoutlibs:
           - flxlibs:
           - lbrulibs:
