--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,6 +176,10 @@ nav:
              - About detchannelmaps: packages/detchannelmaps/README.md
           - detdataformats:
              - About detdataformats: packages/detdataformats/README.md
+          - dtpcontrols:
+             - About dtpcontrols: packages/dtpcontrols/README.md
+          - dtpctrllibs:
+             - About dtpctrllibs: packages/dtpctrllibs/README.md
           - fdreadoutlibs:
              - About fdreadoutlibs: packages/fdreadoutlibs/README.md
           - flxlibs:
