JCF: add the iomanager package

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -158,6 +158,7 @@ nav:
           - trigemu:
           - trigger:
        - Dataflow (physical):
+          - iomanager:
           - ipm:
           - networkmanager:
           - serialization:
