--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -155,12 +155,11 @@ nav:
           - hdf5libs:
           - timing:
           - timinglibs:
-          - trigemu:
           - trigger:
        - Dataflow (physical):
+          - iomanager:
           - ipm:
           - networkmanager:
-          - nwqueueadapters:
           - serialization:
        - Monitoring:
           - erskafka:
