JCF: practice adding daq-systemtest documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -126,6 +126,7 @@ nav:
           - daq-buildtools:
           - daq-cmake:
           - daq-release:
+          - daq-systemtest:
           - integrationtest:
           - styleguide:
        - Core:   
