--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,7 +128,6 @@ nav:
           - daq-cmake:
              - About daq-cmake: packages/daq-cmake/README.md
           - daq-release:
-             - About daq-release: packages/daq-release/README.md
              - packages/daq-release/add_modules_to_pypi_repo.md
              - packages/daq-release/ci_github_action.md
              - packages/daq-release/create_release_spack.md
@@ -137,29 +136,36 @@ nav:
              - packages/daq-release/publish_to_cvmfs.md
              - packages/daq-release/slides.md
              - packages/daq-release/team_repos.md
+             - About daq-release: packages/daq-release/README.md
+          - daq-systemtest:
+             - About daq-systemtest: packages/daq-systemtest/config/long_window_readout/README.md
+             - packages/daq-systemtest/integtest_duplicate_of_other_README.md
+             - packages/daq-systemtest/integtest_README.md
+             - packages/daq-systemtest/non_softlink.md
+             - About daq-systemtest: packages/daq-systemtest/README.md
           - integrationtest:
              - About integrationtest: packages/integrationtest/README.md
           - styleguide:
              - About styleguide: packages/styleguide/README.md
        - Core:   
           - appfwk:
-             - About appfwk: packages/appfwk/README.md
              - packages/appfwk/Daq-Application.md
+             - packages/appfwk/schema_README.md
+             - About appfwk: packages/appfwk/README.md
           - cmdlib:
-             - About cmdlib: packages/cmdlib/README.md
              - packages/cmdlib/Home.md
              - packages/cmdlib/User-Guide.md
+             - About cmdlib: packages/cmdlib/README.md
           - ers:
              - About ers: packages/ers/README.md
           - logging:
-             - About logging: packages/logging/README.md
              - packages/logging/ers-conventions.md
+             - About logging: packages/logging/README.md
           - utilities:
-             - About utilities: packages/utilities/README.md
              - packages/utilities/WorkerThread-Usage-Notes.md
+             - About utilities: packages/utilities/README.md
        - Readout:
           - daqdataformats:
-             - About daqdataformats: packages/daqdataformats/README.md
              - packages/daqdataformats/ComponentRequestV0.md
              - packages/daqdataformats/ComponentRequestV1.md
              - packages/daqdataformats/ComponentRequestV2.md
@@ -174,9 +180,11 @@ nav:
              - packages/daqdataformats/TriggerRecordHeaderDataV1.md
              - packages/daqdataformats/TriggerRecordHeaderDataV2.md
              - packages/daqdataformats/TriggerRecordHeaderDataV3.md
+             - About daqdataformats: packages/daqdataformats/README.md
           - detchannelmaps:
              - About detchannelmaps: packages/detchannelmaps/README.md
           - detdataformats:
+             - packages/detdataformats/include_detdataformats_trigger_README.md
              - About detdataformats: packages/detdataformats/README.md
           - dtpcontrols:
              - About dtpcontrols: packages/dtpcontrols/README.md
@@ -185,7 +193,6 @@ nav:
           - fdreadoutlibs:
              - About fdreadoutlibs: packages/fdreadoutlibs/README.md
           - flxlibs:
-             - About flxlibs: packages/flxlibs/README.md
              - packages/flxlibs/Basic-tests.md
              - packages/flxlibs/Configuring-the-EMU.md
              - packages/flxlibs/Enabling-links-and-setting-the-superchunk-factor.md
@@ -193,46 +200,56 @@ nav:
              - packages/flxlibs/Initial-setup-of-FELIX.md
              - packages/flxlibs/Integration-tests.md
              - packages/flxlibs/Local-driver.md
+             - About flxlibs: packages/flxlibs/README.md
           - lbrulibs:
-             - About lbrulibs: packages/lbrulibs/README.md
              - packages/lbrulibs/socket-implementation.md
+             - About lbrulibs: packages/lbrulibs/README.md
           - readoutlibs:
-             - About readoutlibs: packages/readoutlibs/README.md
              - packages/readoutlibs/Directory-structure.md
+             - packages/readoutlibs/scripts_README.md
+             - About readoutlibs: packages/readoutlibs/README.md
           - readoutmodules:
              - About readoutmodules: packages/readoutmodules/README.md
        - Control:
           - daqconf:
-             - About daqconf: packages/daqconf/README.md
              - packages/daqconf/ConfigurationsForCasualUsers.md
              - packages/daqconf/InstructionsForCasualUsers.md
              - packages/daqconf/MigratingToNewConfgen.md
+             - packages/daqconf/pytest_README.md
+             - About daqconf: packages/daqconf/README.md
           - nanorc:
+             - packages/nanorc/src_nanorc_webuidata_static_vendor_jquery-machine_README.md
+             - packages/nanorc/src_nanorc_webuidata_static_vendor_jstree_demo_README.md
+             - packages/nanorc/src_nanorc_webuidata_static_vendor_jstree_README.md
              - About nanorc: packages/nanorc/README.md
           - restcmd:
+             - packages/restcmd/scripts_README.md
              - About restcmd: packages/restcmd/README.md
        - Dataflow (logical):
           - dfmessages:
              - About dfmessages: packages/dfmessages/README.md
           - dfmodules:
-             - About dfmodules: packages/dfmodules/README.md
+             - packages/dfmodules/integtest_README.md
+             - packages/dfmodules/python_dfmodules_tpset_demo_README.md
              - packages/dfmodules/TRB_metrics.md
+             - About dfmodules: packages/dfmodules/README.md
           - hdf5libs:
-             - About hdf5libs: packages/hdf5libs/README.md
              - packages/hdf5libs/V3FileFormatInterfaceChanges.md
+             - About hdf5libs: packages/hdf5libs/README.md
           - timing:
+             - packages/timing/test_Notes.md
              - About timing: packages/timing/README.md
           - timinglibs:
              - About timinglibs: packages/timinglibs/README.md
           - trigger:
-             - About trigger: packages/trigger/README.md
              - packages/trigger/trigger-alg-howto.md
+             - About trigger: packages/trigger/README.md
        - Dataflow (physical):
           - iomanager:
-             - About iomanager: packages/iomanager/README.md
              - packages/iomanager/NetworkManager.md
              - packages/iomanager/Queue.md
              - packages/iomanager/Updating.md
+             - About iomanager: packages/iomanager/README.md
           - ipm:
              - About ipm: packages/ipm/README.md
           - serialization:
@@ -245,8 +262,8 @@ nav:
           - kafkaopmon:
              - About kafkaopmon: packages/kafkaopmon/README.md
           - opmonlib:
-             - About opmonlib: packages/opmonlib/README.md
              - packages/opmonlib/Instructions-for-DAQ-module-users.md
+             - About opmonlib: packages/opmonlib/README.md
        - Educational:
           - listrev:
              - About listrev: packages/listrev/README.md
