JCF: Issue #29: follow Pengfei's advice and try using the relative paths of Markdown files outside of docs/ so that links can work

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -135,6 +135,7 @@ nav:
           - logging:
           - utilities:
        - Readout:
+          - complex_documentation:
           - daqdataformats:
           - detchannelmaps:
           - detdataformats:
