JCF: Issue #29: I left some crucial files out of the previous commit; fixed.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,12 @@ nav:
              - packages/daq-release/publish_to_cvmfs.md
              - packages/daq-release/slides.md
              - packages/daq-release/team_repos.md
+          - daq-systemtest:
+             - About daq-systemtest: packages/daq-systemtest/README.md
+             - packages/daq-systemtest/config/emulated_systems/README.md
+             - packages/daq-systemtest/config/hd_coldbox_tests/README.md
+             - packages/daq-systemtest/config/long_window_readout/README.md
+             - packages/daq-systemtest/integtest/README.md
           - integrationtest:
              - About integrationtest: packages/integrationtest/README.md
           - styleguide:
