--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -165,6 +165,7 @@ nav:
           - erskafka:
           - kafkaopmon:
           - opmonlib:
+          - rawdatautils:
        - Educational:
           - listrev:
 
