JCF: include Markdown files from non-standard locations

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -126,6 +126,7 @@ nav:
           - daq-buildtools:
           - daq-cmake:
           - daq-release:
+          - daq-systemtest:
           - integrationtest:
           - styleguide:
        - Core:   
@@ -162,9 +163,9 @@ nav:
           - serialization:
        - Monitoring:
           - erskafka:
-          - influxopmon:
           - kafkaopmon:
           - opmonlib:
+          - rawdatautils:
        - Educational:
           - listrev:
 
