JCF: add daq-assettools at Pengfei's recommendation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -123,6 +123,7 @@ nav:
        - Overview:
           - README.md
        - Toolset:
+          - daq-assettools:
           - daq-buildtools:
           - daq-cmake:
           - daq-release:
