JCF: add in the new fddetdataformats and nddetdataformats package's documentation to reflect the recent split of detdataformats

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -142,9 +142,11 @@ nav:
           - detdataformats:
           - dtpcontrols:
           - dtpctrllibs:
+          - fddetdataformats:
           - fdreadoutlibs:
           - flxlibs:
           - lbrulibs:
+          - nddetdataformats:
           - readoutlibs:
           - readoutmodules:
           - wibmod:
