JCF: add in documentation for the OKS suite (i.e. for the dal and dbe packages)

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -151,7 +151,9 @@ nav:
           - readoutmodules:
           - wibmod:
        - Control:
+          - dal:
           - daqconf:
+          - dbe:
           - nanorc:
           - restcmd:
        - Dataflow (logical):
