JCF: update documentation for v4.1.0 release

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -142,14 +142,18 @@ nav:
           - detdataformats:
           - dtpcontrols:
           - dtpctrllibs:
+          - fddetdataformats:
           - fdreadoutlibs:
           - flxlibs:
           - lbrulibs:
+          - nddetdataformats:
           - readoutlibs:
           - readoutmodules:
           - wibmod:
        - Control:
+          - dal:
           - daqconf:
+          - dbe:
           - nanorc:
           - restcmd:
        - Dataflow (logical):
