JCF: add dpdklibs documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -140,6 +140,7 @@ nav:
           - daqdataformats:
           - detchannelmaps:
           - detdataformats:
+          - dpdklibs:
           - dtpcontrols:
           - dtpctrllibs:
           - fddetdataformats:
