JCF: add in Gordon's coredal documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -152,6 +152,7 @@ nav:
           - readoutmodules:
           - wibmod:
        - Control:
+          - coredal:
           - dal:
           - daqconf:
           - dbe:
