--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,22 +1,21 @@
-# .readthedocs.yaml
+# .readthedocs.yml
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
 version: 2
 
+mkdocs:
+  configuration: mkdocs.yml
+
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "3.8"
 
-# Build documentation in the docs/ directory with Sphinx
-sphinx:
-  configuration: docs/conf.py
-
-# We recommend specifying your dependencies to enable reproducible builds:
-# https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#   install:
-#   - requirements: docs/requirements.txt
+# Set the version of Python and requirements required to build your docs
+python:
+    version: 3.8
+    install:
+    - requirements: docs/requirements.txt
