JCF: account for renaming of daq-systemtest to daqsystemtest

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -127,7 +127,7 @@ nav:
           - daq-buildtools:
           - daq-cmake:
           - daq-release:
-          - daq-systemtest:
+          - daqsystemtest:
           - integrationtest:
           - styleguide:
        - Core:   
