--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,13 +142,13 @@ nav:
              - packages/daq-release/publish_to_cvmfs.md
              - packages/daq-release/slides.md
              - packages/daq-release/team_repos.md
-          - daq-systemtest:
-             - About daq-systemtest: packages/daq-systemtest/README.md
-             - packages/daq-systemtest/config/emulated_systems/README.md
-             - packages/daq-systemtest/config/hd_coldbox_tests/README.md
-             - packages/daq-systemtest/config/long_window_readout/README.md
-             - packages/daq-systemtest/config/timing_systems/README.md
-             - packages/daq-systemtest/integtest/README.md
+          - daqsystemtest:
+             - About daqsystemtest: packages/daqsystemtest/README.md
+             - packages/daqsystemtest/config/emulated_systems/README.md
+             - packages/daqsystemtest/config/hd_coldbox_tests/README.md
+             - packages/daqsystemtest/config/long_window_readout/README.md
+             - packages/daqsystemtest/config/timing_systems/README.md
+             - packages/daqsystemtest/integtest/README.md
           - integrationtest:
              - About integrationtest: packages/integrationtest/README.md
           - styleguide:
