--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,8 +8,13 @@ version: 2
 mkdocs:
   configuration: mkdocs.yml
 
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
+
 # Set the version of Python and requirements required to build your docs
 python:
-    version: 3.8
-    install:
-    - requirements: docs/requirements.txt
+  install:
+  - requirements: docs/requirements.txt
