--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,13 +142,13 @@ nav:
              - packages/daq-release/publish_to_cvmfs.md
              - packages/daq-release/slides.md
              - packages/daq-release/team_repos.md
-          - daq-systemtest:
-             - About daq-systemtest: packages/daq-systemtest/README.md
-             - packages/daq-systemtest/config/emulated_systems/README.md
-             - packages/daq-systemtest/config/hd_coldbox_tests/README.md
-             - packages/daq-systemtest/config/long_window_readout/README.md
-             - packages/daq-systemtest/config/timing_systems/README.md
-             - packages/daq-systemtest/integtest/README.md
+          - daqsystemtest:
+             - About daqsystemtest: packages/daqsystemtest/README.md
+             - packages/daqsystemtest/config/emulated_systems/README.md
+             - packages/daqsystemtest/config/hd_coldbox_tests/README.md
+             - packages/daqsystemtest/config/long_window_readout/README.md
+             - packages/daqsystemtest/config/timing_systems/README.md
+             - packages/daqsystemtest/integtest/README.md
           - integrationtest:
              - About integrationtest: packages/integrationtest/README.md
           - styleguide:
@@ -192,29 +192,16 @@ nav:
           - detdataformats:
              - About detdataformats: packages/detdataformats/README.md
           - dpdklibs:
-             - About dpdklibs: packages/dpdklibs/README.md
-             - packages/dpdklibs/utils/intel/README.md
-             - packages/dpdklibs/utils/mlx/READOUT.md
           - dtpcontrols:
              - About dtpcontrols: packages/dtpcontrols/README.md
           - dtpctrllibs:
              - About dtpctrllibs: packages/dtpctrllibs/README.md
           - fddetdataformats:
-             - About fddetdataformats: packages/fddetdataformats/README.md
           - fdreadoutlibs:
-             - About fdreadoutlibs: packages/fdreadoutlibs/README.md
-             - packages/fdreadoutlibs/test/apps/README.md
           - flxlibs:
-             - About flxlibs: packages/flxlibs/README.md
-             - packages/flxlibs/Basic-tests.md
-             - packages/flxlibs/Configuring-the-EMU.md
-             - packages/flxlibs/Enabling-links-and-setting-the-superchunk-factor.md
-             - packages/flxlibs/FELIX-assets.md
-             - packages/flxlibs/Initial-setup-of-FELIX.md
-             - packages/flxlibs/Integration-tests.md
-             - packages/flxlibs/Local-driver.md
           - lbrulibs:
              - About lbrulibs: packages/lbrulibs/README.md
+             - packages/lbrulibs/integtest/README.md
              - packages/lbrulibs/socket-implementation.md
           - nddetdataformats:
              - About nddetdataformats: packages/nddetdataformats/README.md
@@ -225,9 +212,6 @@ nav:
           - readoutmodules:
              - About readoutmodules: packages/readoutmodules/README.md
           - wibmod:
-             - About wibmod: packages/wibmod/README.md
-             - packages/wibmod/src/WIB1/README.md
-             - packages/wibmod/src/wibmod/WIB1/README.md
        - Control:
           - dal:
              - About dal: packages/dal/README.md
@@ -296,7 +280,6 @@ nav:
              - About opmonlib: packages/opmonlib/README.md
              - packages/opmonlib/Instructions-for-DAQ-module-users.md
           - rawdatautils:
-             - About rawdatautils: packages/rawdatautils/README.md
        - Educational:
           - listrev:
              - About listrev: packages/listrev/README.md
