JCF: drop dal package and add appdal package to the documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -152,8 +152,8 @@ nav:
           - readoutmodules:
           - wibmod:
        - Control:
+          - appdal:
           - coredal:
-          - dal:
           - daqconf:
           - dbe:
           - nanorc:
