--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -144,6 +144,7 @@ nav:
         - fddetdataformats:
         - fdreadoutlibs:
         - flxlibs:
+        - hermesmodules:
         - readoutlibs:
         - readoutmodules:
         - wibmod:
