JCF: add the skeleton of a release notes page

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -122,6 +122,8 @@ nav:
     - Table of Contents: 
        - Overview:
           - README.md
+       - Release Notes:
+          - release_notes.md
        - Toolset:
           - daq-assettools:
           - daq-buildtools:
