JCF: bump documentation up to fddaq-v4.4.0

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -160,6 +160,7 @@ nav:
         - hdf5libs:
         - timing:
         - timinglibs:
+        - trgtools:
         - trigger:
      - Dataflow (physical):
         - iomanager:
