--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -122,6 +122,8 @@ nav:
   - Table of Contents: 
      - Overview:
         - README.md
+     - Release Notes:
+        - release_notes.md
      - Toolset:
         - daq-assettools:
              - About daq-assettools: packages/daq-assettools/README.md
@@ -251,9 +253,17 @@ nav:
              - packages/timing/test/Notes.md
         - timinglibs:
              - About timinglibs: packages/timinglibs/README.md
+        - trgtools:
+             - About trgtools: packages/trgtools/README.md
+             - packages/trgtools/process-tpstream.md
+             - packages/trgtools/py-trgtools.md
+             - packages/trgtools/ta-dump.md
+             - packages/trgtools/tc-dump.md
+             - packages/trgtools/tp-dump.md
         - trigger:
              - About trigger: packages/trigger/README.md
              - packages/trigger/integtest/README.md
+             - packages/trigger/python/trigger/replay_tps/README.md
              - packages/trigger/trigger-alg-howto.md
      - Dataflow (physical):
         - iomanager:
