JCF: re-generate documentation prioritizing production/v4 branch for those repos which default to that branch

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -166,6 +166,7 @@ nav:
           - hdf5libs:
           - timing:
           - timinglibs:
+          - trgtools:
           - trigger:
        - Dataflow (physical):
           - iomanager:
