--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -267,9 +267,17 @@ nav:
              - packages/timing/test/Notes.md
           - timinglibs:
              - About timinglibs: packages/timinglibs/README.md
+          - trgtools:
+             - About trgtools: packages/trgtools/README.md
+             - packages/trgtools/process-tpstream.md
+             - packages/trgtools/py-trgtools.md
+             - packages/trgtools/ta-dump.md
+             - packages/trgtools/tc-dump.md
+             - packages/trgtools/tp-dump.md
           - trigger:
              - About trigger: packages/trigger/README.md
              - packages/trigger/integtest/README.md
+             - packages/trigger/python/trigger/replay_tps/README.md
              - packages/trigger/trigger-alg-howto.md
        - Dataflow (physical):
           - iomanager:
