Use doxygen branch of daq-release (to be updated after PR)

--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -20,6 +20,8 @@ jobs:
     - name: Checkout daq-release
       uses: actions/checkout@v2
       with:
+        repository: DUNE-DAQ/daq-release
+        ref: 'amogan/doxygen'
         path: daq-release
 
     - name: Create dbt area
