Revert to manual workflow trigger while debugging

--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -1,8 +1,9 @@
 name: Build Doxygen and publish to GitHub pages
 
 on:
-  schedule:
-    - cron: "0 5 * * *"
+  workflow_dispatch:
+  #schedule:
+  #  - cron: "0 5 * * *"
 
 jobs:
   build-doxygen:
