Revert to cron schedule at 3 a.m. UTC

--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -1,9 +1,8 @@
 name: Build Doxygen and publish to GitHub pages
 
 on:
-  workflow_dispatch:
-  #schedule:
-  #  - cron: "0 5 * * *"
+  schedule:
+    - cron: "0 3 * * *"
 
 jobs:
   build-doxygen:
