JCF: perform renames as described in DUNE-DAQ/daq-release#373

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -154,8 +154,8 @@ nav:
           - readoutmodules:
           - wibmod:
        - Control:
-          - appdal:
-          - coredal:
+          - appmodel:
+          - confmodel:
           - daqconf:
           - dbe:
           - nanorc:
