Add option to run manually from GitHub

--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -3,6 +3,7 @@ name: Build Doxygen and publish to GitHub pages
 on:
   schedule:
     - cron: "0 5 * * *"
+  workflow_dispatch:
 
 jobs:
   build-doxygen:
