--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: DUNE-DAQ/daq-release
+        ref: 'amogan/update_v5_dbt_build_order'
         path: daq-release
 
     - name: Create dbt area
