Use previous nightly since today's is broken

--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -30,7 +30,7 @@ jobs:
         source /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh
         setup_dbt latest_v5
         date_tag=$(date +%y%m%d)
-        release_name=NFD_DEV_${date_tag}_A9
+        release_name=NFD_DEV_240717_A9
         cd $GITHUB_WORKSPACE
         dbt-create -n $release_name ${{ env.DEV_AREA_NAME }}
         cd ${{ env.DEV_AREA_NAME }}
