--- a/.github/workflows/build-and-publish-doxygen.yml
+++ b/.github/workflows/build-and-publish-doxygen.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Generate Doxyfile
       run: |
         # Reintroduce triggeralgs so Doxygen will see it
-        cd $DBT_AREA_ROOT
+        cd $DBT_AREA_ROOT/sourcecode
         git clone https://github.com/DUNE-DAQ/triggeralgs.git -b develop
         cd $GITHUB_WORKSPACE/daq-release/docs
         ./doxygen_gen.py
