--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -140,6 +140,7 @@ nav:
         - utilities:
      - Readout:
         - daqdataformats:
+        - datahandlinglibs:
         - detchannelmaps:
         - detdataformats:
         - dpdklibs:
@@ -147,10 +148,11 @@ nav:
         - fdreadoutlibs:
         - flxlibs:
         - hermesmodules:
-        - readoutlibs:
-        - readoutmodules:
         - wibmod:
      - Control:
+        - appmodel:
+        - confmodel:
+        - dbe:
         - daqconf:
         - nanorc:
         - restcmd:
