--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -185,6 +185,10 @@ nav:
              - packages/daqdataformats/TriggerRecordHeaderDataV1.md
              - packages/daqdataformats/TriggerRecordHeaderDataV2.md
              - packages/daqdataformats/TriggerRecordHeaderDataV3.md
+        - datahandlinglibs:
+             - About datahandlinglibs: packages/datahandlinglibs/README.md
+             - packages/datahandlinglibs/Directory-structure.md
+             - packages/datahandlinglibs/scripts/README.md
         - detchannelmaps:
              - About detchannelmaps: packages/detchannelmaps/README.md
         - detdataformats:
@@ -209,23 +213,19 @@ nav:
              - packages/flxlibs/Local-driver.md
         - hermesmodules:
              - About hermesmodules: packages/hermesmodules/README.md
-        - readoutlibs:
-             - About readoutlibs: packages/readoutlibs/README.md
-             - packages/readoutlibs/Directory-structure.md
-             - packages/readoutlibs/scripts/README.md
-        - readoutmodules:
-             - About readoutmodules: packages/readoutmodules/README.md
         - wibmod:
              - About wibmod: packages/wibmod/README.md
              - packages/wibmod/src/WIB1/README.md
              - packages/wibmod/src/wibmod/WIB1/README.md
      - Control:
+        - appmodel:
+             - About appmodel: packages/appmodel/README.md
+        - confmodel:
+             - About confmodel: packages/confmodel/README.md
+        - dbe:
+             - About dbe: packages/dbe/README.md
         - daqconf:
              - About daqconf: packages/daqconf/README.md
-             - packages/daqconf/ConfigDatabase.md
-             - packages/daqconf/ConfigurationsForCasualUsers.md
-             - packages/daqconf/InstructionsForCasualUsers.md
-             - packages/daqconf/pytest/README.md
         - nanorc:
              - About nanorc: packages/nanorc/README.md
              - packages/nanorc/FAQ-k8s.md
@@ -255,16 +255,12 @@ nav:
              - About timinglibs: packages/timinglibs/README.md
         - trgtools:
              - About trgtools: packages/trgtools/README.md
-             - packages/trgtools/convert-tplatencies.md
              - packages/trgtools/process-tpstream.md
-             - packages/trgtools/py-trgtools.md
              - packages/trgtools/ta-dump.md
-             - packages/trgtools/tc-dump.md
              - packages/trgtools/tp-dump.md
         - trigger:
              - About trigger: packages/trigger/README.md
              - packages/trigger/integtest/README.md
-             - packages/trigger/python/trigger/replay_tps/README.md
              - packages/trigger/trigger-alg-howto.md
      - Dataflow (physical):
         - iomanager:
