JCF: add dal to the v5 documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -152,6 +152,7 @@ nav:
      - Control:
         - appmodel:
         - confmodel:
+        - dal:
         - dbe:
         - daqconf:
         - nanorc:
