JCF: again turn the crank with the_final_markdown.sh so that dal documentation gets added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -222,6 +222,9 @@ nav:
              - About appmodel: packages/appmodel/README.md
         - confmodel:
              - About confmodel: packages/confmodel/README.md
+        - dal:
+             - About dal: packages/dal/README.md
+             - packages/dal/RELEASE_NOTES.md
         - dbe:
              - About dbe: packages/dbe/README.md
         - daqconf:
