--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -166,6 +166,7 @@ nav:
           - hdf5libs:
           - timing:
           - timinglibs:
+          - tpglibs:
           - trgtools:
           - trigger:
        - Dataflow (physical):
