Add drunc to documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -158,6 +158,7 @@ nav:
           - confmodel:
           - daqconf:
           - dbe:
+          - drunc:
           - nanorc:
           - restcmd:
        - Dataflow (logical):
